# videomti-render

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  renderer.rs
src/core/: context.rs  error.rs
src/model/: composition.rs  layer.rs  mod.rs  transform.rs  types.rs
src/outputs/: buffer.rs  mod.rs  surface.rs
src/pipeline/: geometry.rs  mod.rs  pipeline.rs  shader.wgsl  uniforms.rs
src/resources/: mod.rs  texture_manager.rs
tests/: e2e_render.rs  headless_test.rs  model_test.rs
