[package]
name = "videomti-render"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
crevice = "0.18.0"
glam = { version = "0.30.10", features = ["serde"] }
image = "0.25.9"
mint = "0.5.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
wgpu = "28.0.0"
